# binsalac

./: CMakeLists.txt  LICENSE.txt  README.md  salac.py
llvm2llvm/: CMakeLists.txt  llvm_simplifier.cpp  llvm_simplifier.hpp  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  program_options.hpp  run.cpp
llvm2sala/: CMakeLists.txt  compiler.cpp  compiler.hpp  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  program_options.hpp  run.cpp
sala2sala/: CMakeLists.txt  main.cpp  optimizer.cpp  optimizer.hpp  program_info.cpp  program_info.hpp  program_options.cpp  program_options.hpp  run.cpp
